--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,25 @@
-
 [project]
-name = "representations_analysis"
+authors = [{name = "rfclara", email = "c.rosinafernandez@gmail.com"}]
+name = "fa_na"
+requires-python = ">=3.9"
 version = "0.1.0"
-description = "Add a short description here"
-authors = ["Guillaume Wisniewski <guillaume.wisniewski@u-paris>"]
+dependencies = ["pyannote-audio==3.3.2"]
+
+[build-system]
+build-backend = "hatchling.build"
+requires = ["hatchling"]
+
+[tool.pixi.workspace]
 channels = ["nvidia", "pytorch", "conda-forge"]
 platforms = ["linux-64"]
 
-[tasks]
+[tool.pixi.pypi-dependencies]
+fa_na = { path = ".", editable = true }
 
-[dependencies]
+[tool.pixi.tasks]
+
+[tool.pixi.dependencies]
+
 pydub = ">=0.25.1,<0.26"
 pandas = ">=2.2.3,<3"
 loguru = ">=0.7.2,<0.8"
@@ -25,9 +35,8 @@ torchvision = ">=0.20.1,<0.21"
 pytorch-cuda = "12.1.*"
 ffmpeg = ">=4.3,<5"
 pytest = ">=8.3.5,<9"
+packaging = ">=20.0,<25.0"
 
-
-
-[system-requirements]
-linux = "4.18.0"
+[tool.pixi.environments]
+pyannotenv = { solve-group = "default" }
 
