--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ authors = [{name = "rfclara", email = "c.rosinafernandez@gmail.com"}]
 name = "fa_na"
 requires-python = ">=3.9"
 version = "0.1.0"
-dependencies = ["pyannote-audio==3.3.2"]
+dependencies = ["pyannote-audio==3.3.2", "diarization @ https://github.com/rfclara/diarization.git"]
 
 [build-system]
 build-backend = "hatchling.build"
@@ -12,9 +12,6 @@ requires = ["hatchling"]
 [tool.pixi.workspace]
 channels = ["nvidia", "pytorch", "conda-forge"]
 platforms = ["linux-64"]
-
-[tool.pixi.pypi-dependencies]
-fa_na = { path = ".", editable = true }
 
 [tool.pixi.tasks]
 
