--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,16 @@
 [project]
 authors = [{name = "rfclara", email = "c.rosinafernandez@gmail.com"}]
-name = "fa_na"
+name = "nlp_pangloss"
 requires-python = ">=3.9"
 version = "0.1.0"
-dependencies = ["pyannote-audio==3.3.2", "diarization @ https://github.com/rfclara/diarization.git"]
+dependencies = ["pyannote-audio @ git+https://github.com/pyannote/pyannote-audio.git", "diarization @ git+https://github.com/rfclara/diarization.git"]
 
 [build-system]
 build-backend = "hatchling.build"
 requires = ["hatchling"]
+
+[tool.hatch.metadata]
+allow-direct-references = true
 
 [tool.pixi.workspace]
 channels = ["nvidia", "pytorch", "conda-forge"]
@@ -40,3 +43,11 @@ pyannotenv = { solve-group = "default" }
 [target.linux.dependencies]
 pytorch-cuda = "12.1.*"
 
+[project.scripts]
+transcribe = "nlp_pangloss.segment_and_transcribe:main"
+simple_predict = "nlp_pangloss.predict:main"
+word_align = "nlp_pangloss.word_forced_alignment:main"
+# diarization = "nlp_pangloss.diarization:main"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/nlp_pangloss"]
