--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,36 +12,35 @@ requires = ["hatchling"]
 [tool.hatch.metadata]
 allow-direct-references = true
 
+[tool.pixi.dependencies]
+python = ">=3.9,<3.13"
+pydub = "*"
+pandas = "*"
+loguru = "*"
+textgrid = "*"
+tqdm = "*"
+transformers = "*"
+librosa = "*"
+fastdtw = "*"
+ruff = "*"
+ffmpeg = "*"
+pytest = "*"
+packaging = ">=20.0,<25.0"
+
 [tool.pixi.workspace]
 channels = ["nvidia", "pytorch", "conda-forge"]
 platforms = ["linux-64", "osx-arm64"]
 
-[tool.pixi.tasks]
-
-[tool.pixi.dependencies]
-
-pydub = ">=0.25.1,<0.26"
-pandas = ">=2.2.3,<3"
-loguru = ">=0.7.2,<0.8"
-textgrid = ">=1.5,<2"
-tqdm = ">=4.67.1,<5"
-transformers = "4.6.*"
-pytorch = ">=2.5.1,<3"
-torchaudio = ">=2.5.1,<3"
-librosa = ">=0.10.2.post1,<0.11"
-fastdtw = ">=0.3.4,<0.4"
-ruff = ">=0.8.5,<0.9"
-torchvision = ">=0.20.1,<0.21"
-ffmpeg = ">=4.3,<5"
-pytest = ">=8.3.5,<9"
-packaging = ">=20.0,<25.0"
-
-[tool.pixi.environments]
-pyannotenv = { solve-group = "default" }
-
-# Only include pytorch-cuda for linux-64
-[target.linux.dependencies]
+[target.linux-64.dependencies]
+pytorch = ">=2.6"
+torchvision = "*"
+torchaudio = "*"
 pytorch-cuda = "12.1.*"
+
+[target.osx-arm64.dependencies]
+pytorch = "2.2.*"
+torchvision = "0.17.*"
+torchaudio = "2.*"
 
 [project.scripts]
 transcribe = "nlp_pangloss.segment_and_transcribe:main"
