--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ pytorch-cuda = "12.1.*"
 pytorch = "2.2.*"
 torchvision = "0.17.*"
 torchaudio = "2.*"
+nomkl = "*"
 
 [project.scripts]
 transcribe = "nlp_pangloss.segment_and_transcribe:main"
