--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ packaging = ">=20.0,<25.0"
 
 [tool.pixi.workspace]
 channels = ["nvidia", "pytorch", "conda-forge"]
-platforms = ["linux-64", "osx-arm64"]
+platforms = ["linux-64", "osx-arm64", "win-64"]
 
 [target.linux-64.dependencies]
 pytorch = ">=2.6"
@@ -42,6 +42,11 @@ pytorch = "2.2.*"
 torchvision = "0.17.*"
 torchaudio = "2.*"
 nomkl = "*"
+
+[target.win-64.dependencies]
+pytorch = "2.2.*"
+torchvision = "0.17.*"
+torchaudio = "2.*"
 
 [project.scripts]
 transcribe = "nlp_pangloss.segment_and_transcribe:main"
